--- a/src/index.css
+++ b/src/index.css
@@ -81,9 +81,126 @@ body {
   animation: pulsateGlow 2s ease-in-out infinite;
 }
 
+.sparkleButton3 {
+  position: fixed;
+  left: 621.5px;
+  bottom: 234px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.sparkleButton3 img {
+  width: 18px; /* Adjust size as needed */
+  height: auto;
+  border-radius: 50%;
+  animation: pulsateGlow 2s ease-in-out infinite;
+}
+
+.zenBlossomBackground {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  overflow: hidden;
+}
+
+.youtubeVideoBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.contentOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10; /* Ensures the overlay is above the video */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.01); /* Semi-transparent background */
+}
+
+.playButton1 {
+  background-image: url('/public/sparkles.gif'); /* Using sparkles.gif as the button background */
+  background-size: cover;
+  width: 100px; /* Adjust the size as needed */
+  height: 100px;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%; /* Makes it circular */
+  outline: none; /* Removes the outline */
+  animation: pulsateGlow 2s ease-in-out infinite; /* Optional: reuse the glow animation */
+}
+
+.backButton1 {
+  position: absolute;
+  bottom: 20px; /* 20px from the bottom */
+  left: 20px; /* 20px from the left */
+  background-image: url('/public/backbutton.gif'); /* Using backbutton.gif as the button background */
+  background-color: transparent;
+  background-size: cover;
+  width: 50px; /* Adjust the size as needed */
+  height: 50px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.sparkleButton6 {
+  position: fixed;
+  right: 135px;
+  top: 47%;
+  transform: translateY(-50%);
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.sparkleButton6 img {
+  width: 50px; /* Adjust size as needed */
+  height: 50px;
+  border-radius: 50%;
+  animation: pulsateGlow 2s ease-in-out infinite;
+}
+
 
 .Escalators {
   background-image: url(/public/escalators.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh; /* Full viewport height */
+}
+
+.sparkleButton5 {
+  position: fixed;
+  left: 48.03%;
+  top: 24%;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.sparkleButton5 img {
+  width: 35px; /* Adjust size as needed */
+  height: auto;
+  border-radius: 50%;
+  animation: pulsateGlow 2s ease-in-out infinite;
+}
+
+.LuxuryMall {
+  background-image: url(/public/interior5.png);
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh; /* Full viewport height */
+}
+
+.TallMall {
+  background-image: url(/public/interior6.png);
   background-size: cover;
   background-position: center;
   min-height: 100vh; /* Full viewport height */
